2002-12-04 12:15  jrfonseca

	* ChangeLog, Makefile.am, configure.ac, dos2unix/Makefile.am,
	drmingw/Makefile.am, pexports/Makefile.am, redir/Makefile.am,
	reimp/Makefile.am, res2coff/Makefile.am, scripts/dsw2mak.in,
	unix2dos/Makefile.am: Added a 'sdist' and 'bdist' target to the top
	level Makefile to create the source and binary package of
	mingw-utils, respectively.  Permanently removed the commented
	libtool stuff after trying once more time to build exchdnl.dll
	using it without success.  Installation of the documentation using
	automake variables, which is much cleaner and simple than using
	install hooks.

2002-12-02 22:12  jrfonseca

	* drmingw/include/: demangle.h, dis-asm.h, libcoff.h,
	aout/aout64.h, aout/stab.def, aout/stab_gnu.h, coff/internal.h:
	Updated the BFD headers from lates binutils.

2002-12-02 21:45  jrfonseca

	* drmingw/Makefile.am: Small chnages in the example rules to make
	them smaller.

2002-12-02 21:40  jrfonseca

	* drmingw/: COPYING, COPYING.LIB: Dual license Dr.Mingw code under
	GPL and LGPL, to match binutils license.

2002-12-02 21:38  jrfonseca

	* drmingw/: exchndl.c, symbols.c: Small cosmetic changes to match
	latest binutils code.

2002-12-01 14:02  jrfonseca

	* ChangeLog, configure.ac, drmingw/Makefile.am,
	drmingw/samples/test-c.c, drmingw/samples/test-cxx.cxx,
	drmingw/samples/test-segv.cpp, drmingw/samples/test-segv.cxx,
	drmingw/samples/test.c, drmingw/samples/testcpp.cxx,
	pexports/Makefile.am, redir/Makefile.am, res2coff/Makefile.am,
	scripts/Makefile.am: Bumped version number to mingw-utils-0.2. 
	Documentation of most packages, Dr.MinGW samples and exchndl.dll
	are now all installed with 'make install'.  Renamed Dr.MinGW
	samples to match documentation (as it would be too much trouble to
	do it otherwise due to the existing screenshots).

2002-11-29 20:59  jrfonseca

	* drmingw/: Makefile.am, debugger.c, dialog.c, exchndl.c, log.c,
	main.c, misc.c, module.c, symbols.c, doc/drmingw.html: Updated